# Vix

./: .gitignore  .ignore  DesktopAssistant.sln  README.md  for now okey, future dix.txt
backend/: .env.example  assistant_events.sqlite3-shm  assistant_events.sqlite3-wal  pyproject.toml
backend/.backend.venv/: pyvenv.cfg
backend/app/: __init__.py  config.py  logging_config.py  main.py
backend/app/api/: browser_routes.py  chat_routes.py  context_routes.py  permission_routes.py  proposed_tool_routes.py  tool_routes.py
backend/app/assistant/: __init__.py  browser_task_loop.py  context_intent.py  llm_client.py  llm_planner.py  missing_tool_proposer.py  orchestrator.py  planner.py  policy.py  request_classifier.py  semantic_router.py  task_loop.py  text_canonicalization.py
backend/app/browser/: __init__.py  element_registry.py  extractors.py  page_snapshot.py  safety.py  session_manager.py
backend/app/context/: window_tracker.py
backend/app/db/: __init__.py  database.py  models.py
backend/app/events/: __init__.py  event_bus.py
backend/app/schemas/: ai.py  browser.py  chat.py  events.py  plans.py  proposed_tools.py  tools.py  window_context.py
backend/app/tools/: __init__.py  base.py  browser_tools.py  context_tools.py  registry.py  system_tools.py  weather_tools.py
backend/app/ws/: __init__.py  event_stream.py
backend/tests/: test_api.py  test_browser_tools.py  test_canonicalized_intents.py  test_clarifications.py  test_intent_dataset.py  test_llm_planner.py  test_semantic_router.py  test_task_loop.py
backend/tests/fixtures/: intent_cases.jsonl
(+24 files in other folders)
