[project]
name = "desktop-assistant-backend"
version = "0.1.0"
description = "Stage 1.9 deterministic local runtime for the Windows desktop assistant."
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115,<1.0",
    "pydantic>=2.8,<3.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
